// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker renders agent marker 1`] = `
<styled.div
  style={
    Object {
      "left": "10px",
    }
  }
>
  <ErrorMarker
    mark={
      Object {
        "name": "agent",
        "offset": 1000,
        "type": "agentMark",
      }
    }
  />
</styled.div>
`;

exports[`Marker renders error marker 1`] = `
<styled.div
  style={
    Object {
      "left": "10px",
    }
  }
>
  <ErrorMarker
    mark={
      Object {
        "error": Object {
          "error": Object {
            "grouping_key": "123",
          },
          "trace": Object {
            "id": "123",
          },
          "transaction": Object {
            "id": "456",
          },
        },
        "id": "123",
        "name": "foo",
        "offset": 10000,
        "serviceColor": "#fff",
        "serviceName": "bar",
      }
    }
  />
</styled.div>
`;
